--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Test Site</title>
-    <meta name="google-site-verification" content="puNogLTiExXySDud6BiW9rpnYEcTHO8yCUVjt1LC0xU" />
+    <meta name="aaaaaagoogle-site-verification" content="" />
   </head>
   <body>
     <p>This is a testing site.</p>
