--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Test Site</title>
-    <meta name="aaaaaagoogle-site-verification" content="" />
+    <meta name="google-site-verification" content="712OIabmg11rOHUBjIGDqJsXPxg-prHNf4inLQEs4Yg" />
   </head>
   <body>
     <p>This is a testing site.</p>
