--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta name="google-site-verification" content="712OIabmg11rOHUBjIGDqJsXPxg-prHNf4inLQEs4Yg" />
   </head>
   <body>
-    <p>This is a testing site.</p>
+    <p>This is a testing site NEW.</p>
   </body>
 </html>
